--- a/public/index.html
+++ b/public/index.html
@@ -7,36 +7,18 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="E-Business-Card" />
+    <meta name="description" content="We have brought a new approach to business cards through making them more accessable, less costly and environment-friendly." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta property="og:title" content="E-Business-Card">
+    <meta property="og:description" content="We have brought a new approach to business cards through making them more accessable, less costly and environment-friendly.">
+    <meta property="og:url" content="https://ebcards.web.app/home">
+    <meta property="og:image" content="https://i.imgur.com/lUlz4bp.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="E-Business-Card">
     <title>E-Business-Card</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
