meta img is changed

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="E-Business-Card">
     <meta property="og:description" content="We have brought a new approach to business cards through making them more accessable, less costly and environment-friendly.">
     <meta property="og:url" content="https://ebcards.web.app/home">
-    <meta property="og:image" content="https://i.imgur.com/lUlz4bp.png" />
+    <meta property="og:image" content="https://i.imgur.com/zUJIMx8.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="E-Business-Card">
     <title>E-Business-Card</title>
